Add missing opens/export entries to the development plugin